--- a/proyectos.html
+++ b/proyectos.html
@@ -271,7 +271,7 @@
                         <div class="carousel-item active">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5" >
                                 <h1>Paquete 1</h1>
                                 <h2>$2,500.00</h2>
                                 <br>
@@ -393,7 +393,7 @@
                         <div class="carousel-item active">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5" >
                                 <h1>Paquete 1</h1>
                                 <h2>$1,750.00</h2>           
                                 <br>
@@ -508,7 +508,7 @@
              <!--precios-->
              <div class="conatiner">
               <div class="row justify-content-center align-items-center seccion2">
-                <div class="col-lg-7">
+                <div class="col-lg-10 text-center px-5" >
                   <h1>$350 C/U</h1>
                   <br>
                   <br>
