--- a/index.html
+++ b/index.html
@@ -156,32 +156,32 @@
       <section class="container py-5 seccion2" style="text-align: center;">
         <h2>EXPERIENCIAS</h2>
         <!--carrusel-->
-
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleInterval" class="carousel carousel-dark slide py-4" data-bs-ride="carousel">
           <div class="carousel-inner">
 
             <div class="carousel-item active" data-bs-interval="10000">
-              <div class="row align-items-center">
-                <div class="col-lg-4">
-                  <img src="img/index/infantil2.jpg" alt="joaquin" width="100%">
-                </div>
-                <div class="col-lg-8 py-3">
-                  <p>
-                  Joaquín: Me divertí mucho y se sintió padre ser el modelo de las fotos, no me gustaban las flores,
-                  pero cuando vi la foto me gustó más.
-                  </p>
-                </div>
+              <div class="row  justify-content-center align-items-center px-5">
+                  <div class="col-lg-4">
+                    <img src="img/index/infantil2.jpg" alt="joaquin" width="100%">
+                  </div>
+                  <div class="col-lg-5 py-2" style="text-align: justify;">
+                    <p>
+                    <b>Joaquín:</b>
+                    Me divertí mucho y se sintió padre ser el modelo de las fotos, no me gustaban las flores,
+                    pero cuando vi la foto me gustó más.
+                    </p>
+                  </div>
               </div>
             </div>
 
             <div class="carousel-item" data-bs-interval="2000">
-             <div class="row align-items-center">
+             <div class="row justify-content-center align-items-center px-5">
                 <div class="col-lg-4">
                   <img src="img/index/sam2.jpg" alt="Sam" width="100%">
                 </div>
-                <div class="col-lg-8 py-3">
+                <div class="col-lg-5 py-2" style="text-align: justify;" >
                   <p>
-                  Sam: 
+                  <b>Sam: </b> 
                   Personalmente, yo conozco a Cris desde hace mucho tiempo, y no sabía el talento que tenía para hacer fotos
                   hasta que me pidió ser su modelo en una ocación, yo me sentí muy comoda durante el proceso, y aunque una pensaria
                   que se puede sentir muy pesado, ella sabe como hacer las cosas para pasar un buen rato y tomar fotos increibles.
@@ -192,13 +192,13 @@
             </div>
 
             <div class="carousel-item">
-              <div class="row align-items-center">
+              <div class="row justify-content-center align-items-center px-5">
                 <div class="col-lg-4">
                   <img src="img/index/Romi-testimonio.jpg" alt="Romi Jakuna" width="100%">
                 </div>
-                <div class="col-lg-8 py-3">
+                <div class="col-lg-5 py-2" style="text-align: justify;">
                   <p>
-                  Romina: 
+                  <b>Romina:</b> 
                   Me invitaron a modelar en Jakuna, fue divertido y fácil porque Cris me iba diciendo como posar. 
                   </p>
                 </div>
@@ -216,8 +216,8 @@
         </div>
 
       </section>
-      <!--Un paquete para ti-->
-      <section class="container py-5 seccion2" style="text-align: center;">
+       <!--Un paquete para ti-->
+       <section class="container py-5 seccion2" style="text-align: center;">
       <h2>UN PAQUETE PARA TI</h2>
       <div class="row">
         <!--Fotografía publicitaria-->
@@ -270,7 +270,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 2</h1>
                                 <h2>$3,750.00</h2>
                                 <br>
@@ -295,7 +295,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 3</h1>
                                 <h2>$6,500.00</h2>
                                 <br>
@@ -392,7 +392,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 2</h1>
                                 <h2>$3,500.00</h2>           
                                 <br>
@@ -417,7 +417,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 3</h1>
                                 <h2>$5,500.00</h2>           
                                 <br>
@@ -515,23 +515,23 @@
         </div>
         </div>
       </div>
-      </section>
+       </section>
     </main>
 
     <footer class="text-center">
       <div class="container-fluid footer text-white py-5">
          <div class="row">
-           <div class="col-lg-4">
+           <div class="col-lg-4 py-3">
              <h3>
                Personaliza tu sesión
              </h3>
              <h5>
                contáctame
              </h5>
-             <a href="mailto:crispapompa@gmail.com">crispapompa@hotmail.com</a>
+             <a href="mailto:crispapompa@gmail.com">crispapompa@gmail.com</a>
            </div>
     
-           <div class="col-lg-4">
+           <div class="col-lg-4 py-3">
              <h3>
               Un poco más
              </h3>
