--- a/servicios.html
+++ b/servicios.html
@@ -117,7 +117,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 2</h1>
                                 <h2>$3,750.00</h2>
                                 <br>
@@ -142,7 +142,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 3</h1>
                                 <h2>$6,500.00</h2>
                                 <br>
@@ -239,7 +239,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 2</h1>
                                 <h2>$3,500.00</h2>           
                                 <br>
@@ -264,7 +264,7 @@
                         <div class="carousel-item">
                           <div class="container">
                             <div class="row justify-content-center align-items-center">
-                              <div class="col-lg-8 text-center">
+                              <div class="col-lg-10 text-center px-5">
                                 <h1>Paquete 3</h1>
                                 <h2>$5,500.00</h2>           
                                 <br>
@@ -439,20 +439,21 @@
     </section>
   </main>
 
+  
   <footer class="text-center">
     <div class="container-fluid footer text-white py-5">
        <div class="row">
-         <div class="col-lg-4">
+         <div class="col-lg-4 py-3">
            <h3>
              Personaliza tu sesión
            </h3>
            <h5>
              contáctame
            </h5>
-           <a href="mailto:crispapompa@gmail.com">crispapompa@hotmail.com</a>
+           <a href="mailto:crispapompa@gmail.com">crispapompa@gmail.com</a>
          </div>
   
-         <div class="col-lg-4">
+         <div class="col-lg-4 py-3">
            <h3>
             Un poco más
            </h3>
