--- a/index.html
+++ b/index.html
@@ -69,27 +69,20 @@
           <div class="row justify-content-center pt-3">
             <div class="col-lg-8 col-md-4 col-sm-4">
               <p style="text-align: justify;">
-                Me llamo Cristina, soy fotógrafa y diseñadora gráfia, hace aproximadamente 2 años empecé mi camino como
-                independiente, despues de haber sido asistente de fotografia en una empresa aprendí como capturar un primer
-                 beso, un "Sí quiero"y ahora quiero seguir haciendo lo mismo pero por mi parte y ajustadome a todos los perfiles,
-                porque todos merecemos una foto perfecta. 
+                Mi nombre es Cristina. Soy fotógrafa y diseñadora gráfica con una sólida formación y experiencia en la creación 
+                de imágenes que cuentan historias con sensibilidad y estilo. Hace más de dos años decidí emprender de manera 
+                independiente, luego de haberme desempeñado como asistente de fotografía en una empresa donde aprendí a capturar 
+                momentos cargados de significado: desde un primer beso hasta el esperado “sí, quiero”.
                 <br>
                 <br>
-                Aqui podrás ver un pedacito de mi trabajo, actualmente realizo fotografía relacionada al "estilo de vida"
-                y producto para negocios, aunque nunca he dejado de realizar fotografía "fine art" ya que en este mundo tan
-                digital, el fine art nos permite tener una imagen de nuestros seres mas queridos con un toque distinto e 
-                irrepetible.
+                Hoy, esa experiencia se ha convertido en mi compromiso profesional: ofrecer imágenes que se adapten a distintos
+                perfiles y necesidades, manteniendo siempre un alto estándar estético y técnico. Creo firmemente que todos merecemos 
+                una fotografía que nos represente de manera auténtica y con calidad.
                 <br>
                 <br>
-                Otro de los campos en el que me desenvuelvo con facilidad es la fotografía de  eventos, ya que 
-                al retratar emociones tan intensas, la cámara no puede mentir, y para ti que estas leyendo esto
-                te voy a decir cual es mi secreto para tner los mejores momentos, soy chismosa... y silenciosa
-                siempre he sabido en donde encontrar los mejores momentos, por ejemplo: en un boda pégate a la novia,
-                en un partido quédate cerca de la porteria, haya o no haya gol va a haber expresión, en un concierto
-                hay que estar cerca del escenario  de preferencia del lado del bajista y podría seguir con mas lugares
-                pero así ya no me contratarías... confiar en una parsona para estos momentos es difícil, por eso estas aquí
-                aquí puedes ver mi fotografía y yo me comprometo a entregar todo bajo el mismo estilo y calidad del que encontrarás 
-                en esta pagina.
+                Mi enfoque une dos disciplinas poderosas: la fotografía y el diseño gráfico. Esta combinación me permite desarrollar
+                propuestas visuales coherentes y efectivas, tanto para clientes individuales como para marcas y proyectos comerciales.
+                No solo genero imágenes; creo experiencias visuales que cuentan historias y refuerzan identidades
               </p>
             </div>
           </div>
