--- a/servicios.html
+++ b/servicios.html
@@ -371,7 +371,7 @@
             <h2>PERZONALIZA TU EXPERIENCIA</h2>
             <br>
             <p style="text-align: justify;">
-              Aunque estoy en León,Gto. México mis servicios están diseñados para adaptarse a ti,
+              Aunque estoy en León, Gto.- México mis servicios están diseñados para adaptarse a ti,
               y puedo desplazarme a donde sea necesario. 
               Igualmente no encontrarás un "paquete de eventos" estándar aquí, 
               porque cada ocasión es única. Me gusta crear experiencias completamente personalizadas según tus necesidades,
@@ -382,7 +382,7 @@
             </p>
             <br>
             <p style="text-align: justify;">
-              contratarme es un proceso. Primero, me contactas para contarme sobre tu proyecto o evento. 
+              Contratar mis servicios es un proceso sencillo. Primero, contactame contarme sobre tu proyecto o evento. 
               Hablamos de los detalles: qué necesitas, fechas, ubicación y cualquier requerimiento especial.
               Con esa información, preparo una cotización personalizada que recibirás por correo y/o wahtasapp. 
               Una vez que recibas la cotización, firmamos el acuerdo y se realiza el depósito inicial. 
